@@ -1,6 +1,6 @@
-# This is awful but the scores directory is actually kept by libgnome
-# and it may not have the same prefix as us.
-scoredir=`pkg-config libgnome-2.0 --variable=prefix`/var/games
+
+
+
 pixmapdir=$(datadir)/pixmaps/gnobots2
 configdir=$(datadir)/gnobots2
 soundlistdir=$(sysconfdir)/sound/events
